--- a/cryptopoly/package.json
+++ b/cryptopoly/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
