--- a/cryptopoly/package.json
+++ b/cryptopoly/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.17.12",
     "daisyui": "^4.12.23",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
