--- a/cryptopoly/package.json
+++ b/cryptopoly/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^4.12.23",
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.1",
+    "pinata": "^1.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
