--- a/cryptopoly/package.json
+++ b/cryptopoly/package.json
@@ -15,6 +15,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.1",
     "pinata": "^1.10.1",
+    "pinata-web3": "^0.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
